--- a/Continuous_Control.ipynb
+++ b/Continuous_Control.ipynb
@@ -51,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env = UnityEnvironment(file_name='...')"
+    "env = UnityEnvironment(file_name='../Reacher_Linux_NoVis/Reacher.x86_64')"
    ]
   },
   {
@@ -128,7 +128,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env_info = env.reset(train_mode=False)[brain_name]     # reset the environment    \n",
+    "env_info = env.reset(train_mode=True)[brain_name]     # reset the environment    \n",
     "states = env_info.vector_observations                  # get the current state (for each agent)\n",
     "scores = np.zeros(num_agents)                          # initialize the score (for each agent)\n",
     "while True:\n",
@@ -153,15 +153,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "env.close()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -172,6 +163,24 @@
     "env_info = env.reset(train_mode=True)[brain_name]\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from train import train\n",
+    "\n",
+    "train(env, 1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -190,7 +199,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
